Fix API Code in Dark Mode

--- a/docs/.vuepress/styles/index.scss
+++ b/docs/.vuepress/styles/index.scss
@@ -10,7 +10,7 @@ h6 {
 
 //This is used to fix Code on the old API page for request and response strings.
 .theme-hope-content pre:not([class]) code {
-  color: var(--code-bg-color);
+  color: var(--text-color);
 }
 
 .custom-container.enterprise {
